Vattenkruka fix: aligned the cards on the vertical axis

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -10,7 +10,7 @@
 
 .card{
     width:200px;
-    height:auto;
+    height:450px;
     margin-bottom: 2%;
 }
 
